--- a/style.css
+++ b/style.css
@@ -1,18 +1,21 @@
 body {
   max-width: 1200px;
   margin: 0 auto;
-}
-
-* {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   font-family: Helvetica;
 }
 
+header{
+  position: absolute;
+  z-index: 1;
+}
+
 .main {
   padding: 10px;
-  width: 700px;
+  max-width: 650px;
+  height:auto;
   margin: auto;
 }
 
@@ -20,7 +23,6 @@ body {
   padding: 40px;
   text-align: left;
   font-weight: lighter;
-  font-color: white;
 }
 
 .block2{
@@ -31,8 +33,23 @@ body {
 }
 
 .cont{
+  top: 50px;
   height:auto;
   max-width: 1200px;
+  overflow: hidden;
+  position:relative;
+  z-index: 2;
+}
+
+.contimg {
+    position: absolute;
+    left: 10px;
+    top: 50px;
+    width: 100%;
+    height: auto;
+    z-index: -99;
+    opacity: 0.2;
+    overflow: hidden;
 }
 
 .pic{
@@ -54,15 +71,16 @@ body {
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
+    opacity: 1.0;
 }
 
 .sidebar a {
-    padding: 8px 8px 8px 32px;
+    padding: 8px 8px 8px 90px;
     text-decoration: none;
     font-size: 25px;
     color: #818181;
     display: block;
-    transition: 0.3s
+    transition: 0.5s;
 }
 
 .sidebar a:hover, .offcanvas a:focus{
