--- a/style.css
+++ b/style.css
@@ -38,18 +38,7 @@ header{
   max-width: 1200px;
   overflow: hidden;
   position:relative;
-  z-index: 2;
-}
-
-.contimg {
-    position: absolute;
-    left: 10px;
-    top: 50px;
-    width: 100%;
-    height: auto;
-    z-index: -99;
-    opacity: 0.2;
-    overflow: hidden;
+  z-index: auto;
 }
 
 .pic{
@@ -64,14 +53,13 @@ header{
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     left: 0;
     background-color: #111;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
-    opacity: 1.0;
 }
 
 .sidebar a {
