--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@ header{
   z-index: 1;
 }
 
+.cont{
+  top: 50px;
+  height:auto;
+  max-width: 1200px;
+  overflow: hidden;
+  position:relative;
+  z-index: auto;
+}
+
 .main {
   padding: 10px;
   max-width: 650px;
@@ -34,21 +43,18 @@ header{
   border-width: thin;
 }
 
-.cont{
-  top: 50px;
-  height:auto;
-  max-width: 1200px;
-  overflow: hidden;
-  position:relative;
-  z-index: auto;
-}
-
 .pic{
   position:relative;
   border-radius: 50%;
   width: 150px;
   float: left;
-  padding: 10px;
+  padding: 30px;
+}
+
+.title{
+  font-size: 40px;
+  font-height: 3px;
+  font-family: Advent Pro;
 }
 
 .headline {
