--- a/style.css
+++ b/style.css
@@ -60,7 +60,9 @@ header{
 .headline {
   line-height: 1.5em;
   color: black;
-  font-size: 20px;
+  font-size: 30px;
+  font-weight: lighter;
+  font-family: Advent Pro;
 }
 
 .bottomline {
