--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
   max-width: 1200px;
   margin: 0 auto;
@@ -40,7 +39,7 @@ header{
 }
 
 .block2{
-  padding: 5px;
+  padding: 20px;
   text-align: left;
   font-weight: lighter;
   border-style: solid;
@@ -62,7 +61,7 @@ header{
 }
 
 .headline {
-  line-height: 1.5em;
+  line-height: 60px;
   color: black;
   font-size: 30px;
   font-weight: lighter;
@@ -99,7 +98,7 @@ p{
 }
 
 .sidebar a {
-    padding: 15px 8px 8px 50px;
+    padding: 15px 8px 8px 55px;
     text-decoration: none;
     font-size: 25px;
     color: #818181;
