--- a/style.css
+++ b/style.css
@@ -1,19 +1,26 @@
 body {
   margin: 0 auto;
   padding: 1em;
-  font-family: "Calibri", Helvetica, sans-serif;
+  font-size: 15px;
+  font-family: Montserrat;
   background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
   background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
   background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 );
+  filter: progid:DXImageTransfom.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 );
   background-color: grey;
   font-weight: lighter;
-  min-height: 1000px;
+  width: 100%;
+  min-height: 750px;
 }
 
 a, a:visited{
   color: inherit;
   text-decoration: none;
+}
+
+#name{
+  font-family: Montserrat;
+  font-size: 20px;
 }
 
 .container{
@@ -22,23 +29,24 @@ a, a:visited{
   flex-flow: column wrap;
   align-items: center;
   height: auto;
-  width: 60%;
+  max-width: 60%;
 }
 
 .content{
-  width: 40%;
+  width: 60%;
   position: relative;
   text-align: center;
 }
 
-div#panel{
+.panel{
  display: none;
  padding:10px;
+ width: 100%;
 }
 
 .main {
   padding: 10px;
-  min-width: 50%;
+  max-width: 80%;
   height:auto;
   margin: auto;
   padding-top: 5px;
@@ -69,27 +77,27 @@ div#panel{
 
 .list-group-item:first-child {
     border-top-right-radius: 4px;
-    border-top-left-radius: 4px;
+  border-top-left-radius: 4px;
 }
 
 .list-group-item:last-child {
-    margin-bottom: 0;
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
+  margin-bottom: 0;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
 a.list-group-item,button.list-group-item {
-    color: #555;
+  color: #555;
 }
 
 a.list-group-item .list-group-item-heading,button.list-group-item .list-group-item-heading {
-    color: #333;
+  color: #333;
 }
 
 a.list-group-item:hover,button.list-group-item:hover,a.list-group-item:focus,button.list-group-item:focus {
-    text-decoration: none;
-    color: #555;
-    background-color: #f5f5f5;
+  text-decoration: none;
+  color: #555;
+  background-color: #f5f5f5;
 }
 
 .buttons{
