--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0 auto;
   padding: 1em;
   font-size: 15px;
-  font-family: Montserrat;
+  font-family: Helvetica;
   background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
   background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
   background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
