--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ a, a:visited{
   width: 55%;
   position: relative;
   text-align: center;
-  margin: 1.5em;
+  margin: 0em 1.5em 3em;
 }
 
 .panel{
@@ -61,6 +61,7 @@ a, a:visited{
   padding-right: 30px;
   padding-left: 30px;
   text-align: left;
+  border-bottom: .1em white solid;
 }
 
 .list-group {
@@ -83,14 +84,14 @@ a, a:visited{
 }
 
 .list-group-item:first-child {
-    border-top-right-radius: 4px;
-  border-top-left-radius: 4px;
+  border-top-right-radius: 0px;
+  border-top-left-radius: 0px;
 }
 
 .list-group-item:last-child {
   margin-bottom: 0;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
 }
 
 a.list-group-item,button.list-group-item {
