--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@media (min-width: 32em) {
+  .modal-box { width: 70%; }
+  body { width: 50%; }
+}
+
 body {
   margin: 0 auto;
   padding: 1em;
@@ -25,9 +30,13 @@ p.bio{
   white-space: nowrap;
 }
 
-a, a:visited{
-  color: inherit;
+a{
   text-decoration: none;
+  color: inherit;
+}
+
+a.links{
+  padding: 2em;
 }
 
 #name{
@@ -104,11 +113,13 @@ a.list-group-item,button.list-group-item {
   color: #555;
 }
 
-a.list-group-item .list-group-item-heading,button.list-group-item .list-group-item-heading {
+a.list-group-item .list-group-item-heading,
+button.list-group-item .list-group-item-heading {
   color: #333;
 }
 
-a.list-group-item:hover,button.list-group-item:hover,a.list-group-item:focus,button.list-group-item:focus {
+a.list-group-item:hover,button.list-group-item:hover,
+a.list-group-item:focus,button.list-group-item:focus {
   text-decoration: none;
   color: #555;
   background-color: #f5f5f5;
@@ -148,4 +159,121 @@ a.list-group-item:hover,button.list-group-item:hover,a.list-group-item:focus,but
   font-size: .8em;
   background-color: #080808;
   opacity: .8;
+}
+
+
+/*                  Modal                   */
+.modal-box {
+  background: white;
+  color: black;
+  margin-top: 1em;
+  display: none;
+  opacity: 0.9;
+  position: absolute;
+  z-index: 1000;
+  height: 70%;
+  width: 68%;
+  border-bottom: 1px solid #aaa;
+  border-radius: 4px;
+  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-clip: padding-box;
+}
+
+.esc-info {
+  width: 10%;
+  color: black;
+  background-color: white;
+  right: 0;
+  top: 0;
+  position: fixed;
+}
+
+#menu-bar {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.menu-titles {
+  color: grey;
+  margin-right: 1em;
+  padding: 3em;
+}
+
+.menu-titles:hover {
+  transition: ease-in-out .2s;
+  background-color: #ccc;
+  cursor: pointer;
+}
+
+.modal-box .modal-body {
+  display: none;
+  margin: 1em;
+  width: auto;
+  padding: 1em;
+  background-color: #e7e7e7;
+}
+
+.modal-box .modal-body.show {
+  display: block;
+  transition: ease 1s;
+}
+
+.modal-box .modal-body a{
+  color: rgb(0, 144, 163);
+}
+
+#accordion {
+  padding: 1em;
+}
+
+.modal-box a{color: black}
+.modal-box a:hover{opacity: .5; transition: ease .5s;}
+
+.modal-box header,
+.modal-box .modal-header {
+  border-bottom: 2px solid #ddd;
+}
+
+.modal-box header h3,
+.modal-box header h4,
+.modal-box .modal-header h3,
+.modal-box .modal-header h4 { margin: 0; }
+
+.modal-box footer,
+.modal-box .modal-footer {
+  padding: 1em;
+  border-top: 1px solid #ddd;
+  background: rgba(0, 0, 0, 0.02);
+  text-align: right;
+}
+
+.modal-overlay {
+  opacity: 1;
+  filter: alpha(opacity=0.4);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 900;
+  width: 100%;
+  height: 100%;
+  background: black !important;
+  cursor: pointer;
+}
+
+a.close {
+  line-height: 1;
+  font-size: 1.5em;
+  position: absolute;
+  top: 5%;
+  right: 2%;
+  text-decoration: none;
+  color: #bbb;
+}
+
+a.close:hover {
+  color: #222;
+  -webkit-transition: color 1s ease;
+  -moz-transition: color 1s ease;
+  transition: color 1s ease;
 }
