--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -14,6 +14,7 @@ body {
 }
 
 body {
+    background-color: grey;
     background: url('../images/desk_bg1.jpg') no-repeat center center/cover;
     color: #eee;
     font-family: "RobotoDraft", "Roboto", 'Helvetica Neue', sans-serif;
