updated resume file, added real content to about portion, added hoboseafood project

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,11 @@ h1 {
 
 /* end bubble stuff */
 
+.quote {
+    font-style: italic;
+    font-weight: 700;
+}
+
 nav ul a {
     font-size: 1.2rem;
     color: #FFF;
