--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,7 @@ nav ul a {
 }
 
 .default_color {
-    background-color: #3D9970 !important
+    background-color: #385569 !important
 }
 
 .default_color_text {
