--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
 
 body {
     background-color: white;
-    color: black;
+    color: #385569;
     font-family: "RobotoDraft", "Roboto", 'Helvetica Neue', sans-serif;
     font-size: 16px;
     font-weight: lighter;
@@ -251,7 +251,7 @@ nav ul a {
 }
 
 .card-content a {
-    color: #3D9970;
+    color: #385569;
 }
 
 .card-content a:hover {
