--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,7 @@ body {
     float: left;
     padding: 0;
     margin: 0;
-}
-
-body {
-    background-color: white;
+    background-color: #385569;
     color: #385569;
     font-family: "RobotoDraft", "Roboto", 'Helvetica Neue', sans-serif;
     font-size: 16px;
