--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,474 +1,305 @@
-/* Custom Stylesheet */
-
-
-/**
- *
- * Tweaked by Josh Friese
- * Thanks for MaterializeCSS.com
- */
-
-@import url(https://fonts.googleapis.com/css?family=Roboto);
 * {
-    -webkit-font-smoothing: antialiased;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 
-html,
+/*
+ * -- BASE STYLES --
+ * Most of these are inherited from Base, but I want to change a few.
+ */
 body {
-    width: 100%;
-    height: 100%;
-    float: left;
-    padding: 0;
-    margin: 0;
-    background-color: #385569;
-    color: #385569;
-    font-family: "RobotoDraft", "Roboto", 'Helvetica Neue', sans-serif;
-    font-size: 16px;
-    font-weight: lighter;
+    line-height: 1.7em;
+    color: #7f8c8d;
+    font-size: 13px;
 }
 
-h1 {
-    padding: 0;
-    margin: .1rem 0;
-    font-weight: 700;
-    padding-left: 8px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+label {
+    color: #34495e;
 }
 
-
-/* return to top */
-
-#return-to-top {
-    z-index: 99;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background: rgb(0, 0, 0);
-    background: rgba(0, 0, 0, 0.7);
-    width: 50px;
-    height: 50px;
-    display: block;
+a:link, a:visited a:hover, a:active {
+    color: white;
+    text-align: center;
     text-decoration: none;
-    -webkit-border-radius: 35px;
-    -moz-border-radius: 35px;
-    border-radius: 35px;
-    display: none;
-    -webkit-transition: all 0.3s linear;
-    -moz-transition: all 0.3s ease;
-    -ms-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
+    display: inline-block;
+  }
+
+.pure-img-responsive {
+    max-width: 100%;
+    height: auto;
 }
 
-#return-to-top i {
-    z-index: 99;
-    color: #fff;
-    margin: 0;
-    position: relative;
-    left: 16px;
-    top: 13px;
-    font-size: 19px;
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    -ms-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
+.logo {
+    margin-top: 2%;
+    margin-left: 2%;
+    max-width: 5em;
 }
 
-#return-to-top:hover {
-    background: rgba(0, 0, 0, 0.9);
+/*
+ * -- LAYOUT STYLES --
+ * These are some useful classes which I will need
+ */
+.l-box {
+    padding: 1em;
 }
 
-#return-to-top:hover i {
-    color: #fff;
-    top: 5px;
+.l-box-lrg {
+    padding: 2em;
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+}
+
+.is-center {
+    text-align: center;
 }
 
 
-/* end return to top stuff */
 
-
-/* bubble stuff */
-
-.bubble {
-    position: relative;
-    width: auto;
-    height: inherit;
-    padding: 0px;
-    background: transparent;
-    border: 2px solid white;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    border-radius: 10px;
-}
-
-.bubble:after {
-    content: '';
-    position: absolute;
-    border-style: solid;
-    border-width: 15px 15px 0;
-    border-color: #FFFFFF transparent;
-    display: block;
-    width: 0;
-    z-index: 1;
-    bottom: -15px;
-    left: 350px;
-}
-
-#intro:before {
-    content: '';
-    position: absolute;
-    border-style: solid;
-    border-width: 15px 15px 0;
-    border-color: #FFFFFF transparent;
-    display: block;
-    width: 0;
-    z-index: 1;
-    top: -15px;
-    right: 250px;
-}
-
-
-/* end bubble stuff */
-
-.quote {
-    font-style: italic;
-    font-weight: 700;
-}
-
-nav ul a {
-    font-size: 1.2rem;
-    color: #FFF;
-    letter-spacing: 2px;
-    display: block;
-    font-weight: 500;
-    padding: 0px 15px;
-}
-
-.special-text {
-    color: black;
-    text-decoration: none;
-    font-weight: bolder;
-}
-
-.bio,
-.inner-bio {
-    font-weight: 300;
-}
-
-.inner-bio {
-    text-align: right;
-    font-size: 1.3em;
-}
-
-.pic {
-    display: block;
-    margin: 0 auto;
-    margin-bottom: 1em;
-    margin-top: 1em;
-    height: 14em;
-    width: 14em;
-}
-
-.default_color {
-    background-color: #385569 !important
-}
-
-.default_color_text {
-    color: #3D9970 !important
-}
-
-.icon-block {
-    padding: 0 15px;
-}
-
-#intro,
-#work,
-#team {
-    padding-top: 4rem;
-}
-
-#index-banner {
-    min-height: 632px;
-    max-height: 864px;
-    position: relative;
-    background-color: #385569;
-    font-weight: 300;
-    padding-bottom: 1em;
-}
-
-#nav_f {
+/*
+ * -- PURE FORM STYLES --
+ * Style the form inputs and labels
+ */
+.pure-form label {
+    margin: 1em 0 0;
     font-weight: bold;
-    font-stretch: condensed;
-    box-shadow: none !important;
-    -webkit-box-shadow: none !important;
+    font-size: 100%;
 }
 
-.text_h {
-    padding: 15% 0;
-    font-size: 6.0em;
-    font-weight: 100;
+.pure-form input[type] {
+    border: 2px solid #ddd;
+    box-shadow: none;
+    font-size: 100%;
+    width: 100%;
+    margin-bottom: 1em;
+}
+
+/*
+ * -- PURE BUTTON STYLES --
+ * I want my pure-button elements to look a little different
+ */
+.pure-button {
+    background-color: #1f8dd6;
+    color: white;
+    padding: 0.5em 2em;
+    border-radius: 5px;
+}
+
+a.pure-button-primary {
+    background: white;
+    color: #1f8dd6;
+    border-radius: 5px;
+    font-size: 120%;
+}
+
+
+/*
+ * -- MENU STYLES --
+ * I want to customize how my .pure-menu looks at the top of the page
+ */
+
+.home-menu {
+    padding: 0.5em;
+    text-align: center;
+    box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
+}
+.home-menu {
+    background: #2d3e50;
+}
+.pure-menu.pure-menu-fixed {
+    /* Fixed menus normally have a border at the bottom. */
+    border-bottom: none;
+    /* I need a higher z-index here because of the scroll-over effect. */
+    z-index: 4;
+}
+
+.home-menu .pure-menu-heading {
+    color: white;
+    font-weight: 400;
+    font-size: 120%;
+}
+
+.home-menu .pure-menu-selected a {
     color: white;
 }
 
-.brand-logo {
-    position: absolute;
-    color: #fff;
-    display: inline-block;
-    font-size: 2.1rem;
-    font-style: normal;
-    font-weight: 300;
-    padding: 0;
-    letter-spacing: 2px;
+.home-menu a {
+    color: #6FBEF3;
+}
+.home-menu li a:hover,
+.home-menu li a:focus {
+    background: none;
+    border: none;
+    color: #AECFE5;
 }
 
-.text_h2 {
-    font-weight: 100;
-    margin-bottom: 4%;
-    line-height: 4.5rem;
-}
 
-.span_h2 {
-    font-weight: 300;
-    color: #3D9970;
-}
+/*
+ * -- SPLASH STYLES --
+ * This is the blue top section that appears on the page.
+ */
 
-.text_b {
-    color: #3D9970;
-}
-
-.in {
-    font-weight: 400 !important;
-    font-style: normal !important;
-}
-
-.promo i {
-    color: #3D9970;
-    font-size: 7rem;
-    display: block;
-}
-
-.card-content a {
-    color: #385569;
-}
-
-.card-content a:hover {
-    color: #3D9970;
-}
-
-#work,
-#team {
-    background: rgb(247, 247, 247);
-}
-
-.name {
-    color: black;
-    font-size: 3rem;
-}
-
-.cd-headline.type .cd-words-wrapper {
-    vertical-align: top;
+.splash-container {
+    background: #2e5b7a;
+    z-index: 1;
     overflow: hidden;
-}
-
-.cd-headline.type .cd-words-wrapper::after {
-    /* vertical bar */
-    content: '';
-    position: absolute;
-    right: 0;
-    top: 50%;
-    bottom: auto;
-    text-align: center;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
-    height: 90%;
-    width: 1px;
-    background-color: #385569;
-}
-
-.cd-headline.type .cd-words-wrapper.waiting::after {
-    -webkit-animation: cd-pulse 1s infinite;
-    -moz-animation: cd-pulse 1s infinite;
-    animation: cd-pulse 1s infinite;
-}
-
-.cd-headline.type .cd-words-wrapper.selected {
-    background-color: #FFF;
-}
-
-.cd-headline.type .cd-words-wrapper.selected::after {
-    visibility: hidden;
-}
-
-.cd-headline.type .cd-words-wrapper.selected b {
-    color: #3D9970;
-}
-
-.cd-headline.type b {
-    visibility: hidden;
-}
-
-.cd-headline.type b.is-visible {
-    visibility: visible;
-}
-
-.cd-headline.type i {
-    position: absolute;
-    visibility: hidden;
-}
-
-.cd-headline.type i.in {
-    position: relative;
-    visibility: visible;
-}
-
-@-webkit-keyframes cd-pulse {
-    0% {
-        -webkit-transform: translateY(-50%) scale(1);
-        opacity: 1;
-    }
-    40% {
-        -webkit-transform: translateY(-50%) scale(0.9);
-        opacity: 0;
-    }
-    100% {
-        -webkit-transform: translateY(-50%) scale(0);
-        opacity: 0;
-    }
-}
-
-@-moz-keyframes cd-pulse {
-    0% {
-        -moz-transform: translateY(-50%) scale(1);
-        opacity: 1;
-    }
-    40% {
-        -moz-transform: translateY(-50%) scale(0.9);
-        opacity: 0;
-    }
-    100% {
-        -moz-transform: translateY(-50%) scale(0);
-        opacity: 0;
-    }
-}
-
-@keyframes cd-pulse {
-    0% {
-        -webkit-transform: translateY(-50%) scale(1);
-        -moz-transform: translateY(-50%) scale(1);
-        -ms-transform: translateY(-50%) scale(1);
-        -o-transform: translateY(-50%) scale(1);
-        transform: translateY(-50%) scale(1);
-        opacity: 1;
-    }
-    40% {
-        -webkit-transform: translateY(-50%) scale(0.9);
-        -moz-transform: translateY(-50%) scale(0.9);
-        -ms-transform: translateY(-50%) scale(0.9);
-        -o-transform: translateY(-50%) scale(0.9);
-        transform: translateY(-50%) scale(0.9);
-        opacity: 0;
-    }
-    100% {
-        -webkit-transform: translateY(-50%) scale(0);
-        -moz-transform: translateY(-50%) scale(0);
-        -ms-transform: translateY(-50%) scale(0);
-        -o-transform: translateY(-50%) scale(0);
-        transform: translateY(-50%) scale(0);
-        opacity: 0;
-    }
-}
-
-
-/* Preloader */
-
-#preloader {
-    position: fixed;
+    /* The following styles are required for the "scroll-over" effect */
+    width: 100%;
+    height: 88%;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #385569;
-    /* change if the mask should have another color then white */
-    z-index: 1200;
-    /* makes sure it stays on top */
-}
-
-#status {
-    width: 200px;
-    height: 200px;
-    position: absolute;
-    left: 50%;
-    /* centers the loading animation horizontally one the screen */
-    top: 50%;
-    /* centers the loading animation vertically one the screen */
-    background-image: url(../img/loader.gif);
-    background-color: white;
-    /* path to your loading animation */
-    background-repeat: no-repeat;
+    position: fixed !important;
+    background-image: url("../img/crowd-back.jpg");
+    background-size: cover;
     background-position: center;
-    margin: -100px 0 0 -100px;
-    /* is width and height divided by two */
+    background-repeat: no-repeat;
 }
 
-@media only screen and (max-width: 480px) {
-    .text_h {
-        padding: 4% 0;
-        font-size: 5em;
-        font-weight: 100;
-        color: white;
+.splash {
+    /* absolute center .splash within .splash-container */
+    width: 80%;
+    height: 50%;
+    margin: auto;
+    position: absolute;
+    top: 100px; left: 0; bottom: 0; right: 0;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+/* This is the main heading that appears on the blue section */
+.splash-head {
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    border: 3px solid white;
+    padding: .6em 1em;
+    font-weight: 100;
+    border-radius: 5px;
+    line-height: 1em;
+    margin-bottom: 0;
+}
+
+/* This is the subheading that appears on the blue section */
+.splash-subhead {
+    color: white;
+    letter-spacing: 0.08em;
+    opacity: 0.8;
+    padding-top: 0.1em
+}
+
+/*
+ * -- CONTENT STYLES --
+ * This represents the content area (everything below the blue section)
+ */
+.content-wrapper {
+    /* These styles are required for the "scroll-over" effect */
+    position: absolute;
+    top: 87%;
+    width: 100%;
+    min-height: 12%;
+    z-index: 2;
+    background: white;
+
+}
+
+/* We want to give the content area some more padding */
+.content {
+    padding: 1em 1em 3em;
+}
+
+/* This is the class used for the main content headers (<h2>) */
+.content-head {
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    margin: 2em 0 1em;
+}
+
+/* This is a modifier class used when the content-head is inside a ribbon */
+.content-head-ribbon {
+    color: white;
+}
+
+/* This is the class used for the content sub-headers (<h3>) */
+.content-subhead {
+    color: #1f8dd6;
+}
+    .content-subhead i {
+        margin-right: 7px;
     }
+
+/* This is the class used for the dark-background areas. */
+.ribbon {
+    background: #2d3e50;
+    color: #aaa;
 }
 
-input,
-textarea {
-    border-bottom: 1px solid #fff;
+/* This is the class used for the footer */
+.footer {
+    background: #111;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
-nav a.button-collapse {
-    right: -25px;
-    float: right;
+/*
+ * -- TABLET (AND UP) MEDIA QUERIES --
+ * On tablets and other medium-sized devices, we want to customize some
+ * of the mobile styles.
+ */
+@media (min-width: 48em) {
+
+    /* We increase the body font size */
+    body {
+        font-size: 16px;
+    }
+
+    /* We can align the menu header to the left, but float the
+    menu items to the right. */
+    .home-menu {
+        text-align: left;
+    }
+        .home-menu ul {
+            float: right;
+        }
+
+    /* We increase the height of the splash-container */
+/*    .splash-container {
+        height: 500px;
+    }*/
+
+    /* We decrease the width of the .splash, since we have more width
+    to work with */
+    .splash {
+        width: 50%;
+        height: 50%;
+    }
+
+    .splash-head {
+        font-size: 250%;
+    }
+
+
+    /* We remove the border-separator assigned to .l-box-lrg */
+    .l-box-lrg {
+        border: none;
+    }
+
 }
 
-.card-avatar .waves-effect {
-    text-align: center;
-    margin-top: 20px;
-}
-
-.card-avatar img {
-    height: 150px;
-    width: 150px;
-    border-radius: 75px;
-}
-
-.card-avatar .card-content {
-    text-align: center;
-}
-
-.card .card-content p {
-    margin: 15px 0px;
-}
-
-.card-avatar .card-content i {
-    font-size: 1.5rem;
-}
-
-.card-avatar .card-content .card-title {
-    line-height: 30px !important;
-}
-
-.parallax-container {
-    max-height: 500px;
-}
-
-#social {
-    border-right: 1px solid white;
-    text-align: right;
-}
-
-.footer-copyright {
-    text-align: right;
-    margin-top: 0px !important;
+/*
+ * -- DESKTOP (AND UP) MEDIA QUERIES --
+ * On desktops and other large devices, we want to over-ride some
+ * of the mobile and tablet styles.
+ */
+@media (min-width: 78em) {
+    /* We increase the header font size even more */
+    .splash-head {
+        font-size: 300%;
+    }
 }
