--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,10 @@ a:link, a:visited a:hover, a:active {
     display: inline-block;
   }
 
+.social {
+    color: black;
+}
+
 .pure-img-responsive {
     max-width: 100%;
     height: auto;
@@ -163,7 +167,7 @@ a.pure-button-primary {
 .splash {
     /* absolute center .splash within .splash-container */
     width: 80%;
-    height: 50%;
+    height: 100%;
     margin: auto;
     position: absolute;
     top: 100px; left: 0; bottom: 0; right: 0;
@@ -210,14 +214,16 @@ a.pure-button-primary {
 /* We want to give the content area some more padding */
 .content {
     padding: 1em 1em 3em;
+    background-color: rgba(0,0,0, 0.10);
 }
 
 /* This is the class used for the main content headers (<h2>) */
 .content-head {
     font-weight: 400;
     text-transform: uppercase;
-    letter-spacing: 0.1em;
+    letter-spacing: 1em;
     margin: 2em 0 1em;
+    color: #111;
 }
 
 /* This is a modifier class used when the content-head is inside a ribbon */
@@ -242,7 +248,7 @@ a.pure-button-primary {
 /* This is the class used for the footer */
 .footer {
     background: #111;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
 }
